--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^14.14.0",
     "discord-akairo": "github:1Computer1/discord-akairo",
     "discord.js": "github:discordjs/discord.js",
+    "rxjs": "^6.6.3",
     "typescript": "^4.0.5"
   }
 }
